--- a/2020Labs/OpenShiftSecurity/documentation/lab1.adoc
+++ b/2020Labs/OpenShiftSecurity/documentation/lab1.adoc
@@ -9,16 +9,16 @@ Almost all software you are running in your containers does not require root. Yo
 
 === Lab 1.1 Pull rogue container image from Docker Hub and observe how OpenShift locks down the container by default
 
-. Create a new project called *myproject*.
+. Create a new project called *myproject-userX*.
 +
 [source]
 ----
-[localhost ~]$ oc new-project myproject
+[localhost ~]$ oc new-project myproject-userX
 ----
 
-. In the OpenShift console, navigate to *Home->Projects*, search for *myproject* and click on it.
+. In the OpenShift console, navigate to *Home->Projects*, search for *myproject-userX* and click on it.
 +
-image:images/lab1.1-myproject.png[]
+image:images/lab1.1-myproject-userX.png[]
 
 . Then, go to the Workload tab and click on *add other content*.
 +
@@ -32,7 +32,7 @@ NOTE: Notice that this container image requires to be run as root on port 80.
 
 . Press *Create*.
 
-. Now, go back to your terminal and go into the project you just created by typing *oc project myproject*. Then, take a look at your pods by typing *oc get pods*. Notice that one of your pods has a CrashLoopBackOff error.
+. Now, go back to your terminal and go into the project you just created by typing *oc project myproject-userX*. Then, take a look at your pods by typing *oc get pods*. Notice that one of your pods has a CrashLoopBackOff error.
 +
 image:images/lab1.1-crashloopbackofferror.png[]
 
